--- a/day12_Reactassignments/scrolling/src/App.css
+++ b/day12_Reactassignments/scrolling/src/App.css
@@ -3,7 +3,7 @@
 }
 .container{
   width: auto;
-  background-color: brown;
+  background:#ebebeb;
   border-radius: 6px;
   margin: 10px;
 padding: 5px;
