--- a/day12_Reactassignments/scrolling/src/App.css
+++ b/day12_Reactassignments/scrolling/src/App.css
@@ -1,8 +1,13 @@
 .App {
   text-align: center;
+  border: 1px solid red;
+  width: 50%;
+  margin: auto;
 }
 .container{
-  width: auto;
+  /* overflow: scroll; */
+  /* overflow: hidden; */
+  margin: auto;
   background:#ebebeb;
   border-radius: 6px;
   margin: 10px;
